# cao

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: rosenbrock_trust_region.py
src/cao/: __init__.py  trust_region.py
tests/: test_trust_region_basic.py
